tests/fixtures/invalid/InvalidUseGrouping.php
<?php

namespace App;

use Vendor\Package\SomeNamespace\{
    SubNamespace\Deep\ClassA,
    SubNamespace\ClassB,
};

class InvalidUseGrouping
{
}
